# squirrel_manipulation

./: .gitignore  .gitmodules  .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  package.xml
squirrel_arm_control/: CMakeLists.txt  package.xml
squirrel_arm_control/include/squirrel_arm_control/: SquirrelControlQueue.hpp  SquirrelKclHand.hpp  squirrelarmcontrolqueue.hpp  squirrelbasecontrolqueue.hpp  squirrelcontrolqueue.hpp  squirrelhand.hpp
squirrel_arm_control/src/: SquirrelControlQueue.cpp  SquirrelKclHand.cpp  squirrelarmcontrolqueue.cpp  squirrelbasecontrolqueue.cpp  squirrelcontrolqueue.cpp  squirrelhand.cpp
squirrel_arm_control/test/: test_squirrel_control.cpp
squirrel_grasp_learning/: CMakeLists.txt  package.xml
squirrel_grasp_learning/launch/: squirrel_grasp_learner_node.launch
squirrel_grasp_learning/scripts/: squirrel_grasp_learner_node.py
squirrel_grasping/: CMakeLists.txt  README.md  old_code.txt  package.xml  setup.py
squirrel_grasping/launch/: squirrel_blind_grasping_node.launch  squirrel_grasping_metahand.launch  squirrel_grasping_node.launch  squirrel_grasping_softhand.launch  squirrel_haf_grasping_node.launch  squirrel_softhand_grasping.launch
squirrel_grasping/scripts/: squirrel_blind_grasping_node.py  squirrel_grasping_node.py  squirrel_haf_grasping_node.py
squirrel_grasping/src/squirrel_grasping/: kcl.py  kclhand.py  metahand.py  softhand.py  tf_lump.py
squirrel_grasping/test/: grasp_test.py
squirrel_grasping_new/: CMakeLists.txt  package.xml
squirrel_grasping_new/include/squirrel_grasping_new/: squirrel_grasp_server.h  squirrel_object_manipulation_server.h
squirrel_grasping_new/launch/: squirrel_grasping.launch  squirrel_object_manipulation.launch
squirrel_grasping_new/scripts/: test_grasp.py  test_grasp_server.py  tuw_test_grasp.py  uibk_test_grasp.py
squirrel_grasping_new/src/: squirrel_grasp_server.cpp  squirrel_object_manipulation_server.cpp
squirrel_handovers/: CMakeLists.txt  package.xml
squirrel_handovers/include/squirrel_handovers/: handover.hpp
squirrel_handovers/launch/: handover.launch  handover_collect.launch  squirrel_handovers.launch
squirrel_handovers/src/: handover.cpp  handover_data_collect.cpp
squirrel_kclhand/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
squirrel_kclhand/cfg/: kclhand.cfg
squirrel_kclhand/common/src/: kclhand_common.cpp
squirrel_kclhand/model/: squirrel_kclhand.ros_package  squirrel_kclhand.ros_package_diagram
squirrel_kclhand/test/: test_kclhand_set_joint_controller_target.py  test_kclhand_set_max_joint_velocity.py  test_kclhand_track_new_setpoints.py  testdata_kclhand_set_joint_controller_target.yaml  testdata_kclhand_set_max_joint_velocity.yaml  testdata_kclhand_track_new_setpoints.yaml
squirrel_kinesthetic_teaching/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  setup.py
squirrel_kinesthetic_teaching/launch/: squirrel_kinesthetic_teaching_node.launch  squirrel_kinesthetic_teaching_node_real.launch  squirrel_kinesthetic_teaching_node_robot.launch  squirrel_kinesthetic_teaching_node_sim.launch  squirrel_kinesthetic_teaching_node_simulator.launch
squirrel_kinesthetic_teaching/scripts/: squirrel_kinesthetic_teaching_node.py
squirrel_kinesthetic_teaching/src/: TeachingNode.cpp  TeachingNode.cpp~  kinesthetic_teaching.cpp  squirrel_kinesthetic_teaching_node.cpp  squirrel_kinesthetic_teaching_node.cpp~
squirrel_kinesthetic_teaching/test/: test_kinesthetic_teaching.cpp
squirrel_kinesthetic_teaching/tests/: fake_forces.py
squirrel_manipulation/: CMakeLists.txt  CMakeLists.txt~  package.xml
squirrel_moveit_utils/: CMakeLists.txt  package.xml
squirrel_moveit_utils/launch/: squirrel_moveit_utils.launch
squirrel_moveit_utils/scripts/: case_collision_tuw-robotino2.py  case_collision_uibk-robotino2.py  ground_emulation.py
squirrel_object_manipulation/: CMakeLists.txt  CMakeLists.txt.orig  README.md  package.xml  package.xml.orig  package.xml~
squirrel_object_manipulation/config/: pushing_robotino2.rviz  pushrviz.rviz  pushrvizstd.rviz
squirrel_object_manipulation/launch/: all.launch  jb_squirrel_object_manipulation.launch  rviz.launch  squirrel_object_manipulation.launch  squirrel_push_manipulation.launch  test_push_sim.launch
squirrel_object_manipulation/model/: manipulation.ros_package  manipulation.ros_package_diagram
squirrel_object_manipulation/scripts/: tuw_test_grasp.py  tuw_test_manipulation.py  uibk_test_grasp.py  uibk_test_manipulation.py
squirrel_object_manipulation/src/: ARDemo.cpp  RobotinoBaseControl.cpp  RobotinoControl.cpp  TestRobotino.cpp  Test_pushing.cpp  pickup.cpp  pushing.cpp  smash.cpp  squirrel_object_manipulation_server.cpp  t.cpp  test_move_base.cpp
squirrel_object_manipulation/test/: manipulation.cpp
squirrel_placement/: CMakeLists.txt  README.md  package.xml  setup.py
squirrel_placement/launch/: squirrel_placement_metahand.launch  squirrel_placement_softhand.launch
squirrel_placement/scripts/: squirrel_placement_node.py
squirrel_ptp_server/: CMakeLists.txt  package.xml
squirrel_ptp_server/launch/: ptp.launch  ptp_metahand.launch  ptp_softhand.launch
squirrel_ptp_server/src/: ptp_node.cpp
squirrel_push_manipulation/: CMakeLists.txt  package.xml
squirrel_push_manipulation/config/: pushing_robotino2.rviz  pushrviz.rviz
squirrel_push_manipulation/launch/: rviz.launch  squirrel_push_manipulation.launch
squirrel_push_manipulation/src/: RobotinoBaseControl.cpp  RobotinoControl.cpp  smash.cpp
squirrel_softhand/: CMakeLists.txt  README.md  package.xml
squirrel_softhand/launch/: squirrel_softhand.launch
squirrel_softhand/src/: qbmove_communications.cpp  softhand_controller.cpp
uibk_arm_controller/: CMakeLists.txt  package.xml
uibk_arm_controller/launch/: controller.launch
uibk_arm_controller/model/: makefile  robotino.gv  robotino.urdf  robotinoarm.urdf
uibk_arm_controller/src/: arm_controller.cpp  arm_node.cpp  base_controller.cpp  uibk_arm_demo.cpp
uibk_planning_test/: CMakeLists.txt  package.xml
uibk_planning_test/src/: main.cpp
(+357 files in other folders)
