<?xml version="1.0"?>
<package>
  <name>squirrel_handovers</name>
  <version>0.0.0</version>
  <description>The squirrel_handovers package</description>

  <maintainer email="senka.krivic8@uibk.ac.at">Senka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>kukadu</build_depend>
  <build_depend>squirrel_manipulation_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>kukadu</run_depend>
  <run_depend>squirrel_manipulation_msgs</run_depend>

</package>
