<?xml version="1.0"?>
<package>
    <name>squirrel_kinesthetic_teaching</name>
    <version>0.0.0</version>
    <description>package for kinesthetic teaching with robotino</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="simon.hangl@uibk.ac.at">simon hangl</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>uibk_planning_node</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <build_depend>moveit_core</build_depend>
    <run_depend>uibk_planning_node</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
