<?xml version="1.0"?>
<package>
    <name>squirrel_kinesthetic_teaching</name>
    <version>0.0.0</version>
    <description>package for kinesthetic teaching with robotino</description>

    <maintainer email="simon.hangl@uibk.ac.at">simon hangl</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>rospy</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_svrs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>uibk_planning_node</build_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_svrs</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>uibk_planning_node</run_depend>

      
</package>
