<?xml version="1.0"?>
<package>
  <name>squirrel_manipulation</name>
  <version>0.0.0</version>
  <description>manipulation metapackage</description>

  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>squirrel_object_manipulation</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
