<?xml version="1.0"?>
<package>
  <name>squirrel_moveit_utils</name>
  <version>0.0.0</version>
  <description>The squirrel_moveit_utils package</description>

  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
