<?xml version="1.0"?>
<package>
  <name>squirrel_moveit_utils</name>
  <version>0.0.0</version>
  <description>The squirrel_moveit_utils package</description>

  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <!--build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_msgs</build_depend-->

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>moveit_commander</build_depend>
  <!--run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>moveit_msgs</run_depend-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
