<?xml version="1.0"?>
<package>
    <name>squirrel_object_manipulation</name>
    <version>0.0.0</version>
    <description>The manipulation package</description>

    <maintainer email="simon.hangl@uibk.ac.at">simon hangl</maintainer>

    <license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
    <build_depend>genmsg</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>control_toolbox</build_depend>    <!-- to find Eigen -->
    <build_depend>costmap_2d</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>kukadu</build_depend>
    <build_depend>kukadu</build_depend>
    <build_depend>mongodb_store</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
	<build_depend>roscpp</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>squirrel_manipulation_msgs</build_depend>
    <build_depend>squirrel_object_perception_msgs</build_depend>
    <build_depend>squirrel_rgbd_mapping_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>control_toolbox</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>kukadu</run_depend>
    <run_depend>mongodb_store</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>squirrel_manipulation_msgs</run_depend>
    <run_depend>squirrel_object_perception_msgs</run_depend>
    <run_depend>squirrel_rgbd_mapping_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>visualization_msgs</run_depend>
    
    <test_depend>rosunit</test_depend>
    
</package>
