<?xml version="1.0"?>
<package>
  <name>squirrel_object_manipulation</name>
  <version>0.0.0</version>
  <description>The squirrel_object_manipulation package</description>

  <maintainer email="patten@acin.tuwien.ac.at">Tim Patten</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>squirrel_manipulation_msgs</build_depend>
  <build_depend>squirrel_motion_planner_msgs</build_depend>
  <build_depend>kclhand_control</build_depend>
  <build_depend>haf_grasping</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>squirrel_waypoint_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>squirrel_object_perception_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>squirrel_manipulation_msgs</run_depend>
  <run_depend>squirrel_motion_planner_msgs</run_depend>
  <run_depend>kclhand_control</run_depend>
  <run_depend>haf_grasping</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>squirrel_waypoint_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
