<?xml version="1.0"?>
<package>
  <name>squirrel_placement</name>
  <version>0.0.0</version>
  <description>The squirrel_placement package</description>

  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>squirrel_manipulation_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>squirrel_softhand</build_depend>
  <build_depend>kclhand_control</build_depend>
  <build_depend>squirrel_ptp_server</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>squirrel_manipulation_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>squirrel_softhand</run_depend>
  <run_depend>kclhand_control</run_depend>
  <run_depend>squirrel_ptp_server</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
